# win_battery_report_analyzer

./: app.py  battery-report.html  captions.py  helpers.py  model.py  plotters.py  processing.py  pyproject.toml  streamlit_helpers.py  test.ipynb
