[tool.poetry]
name = "battery-report-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.1.3"
lxml = "^5.3.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
streamlit = "^1.40.2"
tabulate = "^0.9.0"
scikit-learn = "^1.5.2"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
